<resources>
    <string name="app_name">个人中心</string>
    <string name="loading">加载中</string>
    <string name="QR_login">扫码登陆</string>
    <string name="Account_login">账号登陆</string>
    <string name="username">用户名</string>
    <string name="password">密\t\t码</string>
    <string name="aggre_agreement">同意用户协议</string>
    <string name="login">登陆</string>
    <string name="deivce_activation">设备激活</string>
    <string name="device_activation_note">尊敬的用户，为了设备能够正常使用，请绑定设备和实名认证，这将花费几分钟时间，请耐心等待。</string>
    <string name="use_wechat_scan">请用微信扫码进行设备激活</string>
    <string name="check_activation_state">查询激活状态</string>
    <string name="consult_phone">咨询电话:025-88888888</string>
    <string name="more_help">关注微信公众号获取更多帮助</string>
    <string name="close">关 闭</string>
    <string name="message">消息</string>
    <string name="more">更多</string>
    <string name="input_phone_number">请输入您的手机号</string>
    <string name="input_password">请输入密码</string>
    <string name="agree_contact">用户协议，隐私政策</string>
    <string name="i_agree">我已经阅读并同意</string>
    <string name="open_wechat_scan">打开 微信\n扫一扫注册/登陆</string>

    <string name="user_agreement">用户协议</string>
    <string name="contact_service">联系客服</string>
    <string name="version_info">版本信息</string>
    <string name="phone_number">025-88888888</string>

    <string name="not_real_name">未实名</string>
    <string name="real_name">实名</string>
    <string name="binding_weChat">绑定微信</string>

    <string name="not_car_onwer">非车主</string>
    <string name="car_owner">车主</string>
    <string name="edit_signature">编辑个性签名</string>
    <string name="no_message">暂无消息~</string>

    <string name="edit">编辑</string>
    <string name="select_all">全选</string>
    <string name="select_none">全不选</string>
    <string name="delete">删除</string>
    <string name="cancel">取消</string>
    <string name="switch_account">切换账号</string>
    <string name="real_name_authentication">实名认证</string>
    <string name="i_know">我知道了</string>
    <string name="real_name_authentication_note">尊敬的用户,根据国家工信部要求，使用车内流量须进行实名认证。为了您能正常使用车载流量，请及时实名认证（提交认证资料后，将会在30分钟内完成审核，如遇特殊情况可能延长）</string>
    <string name="unbind_account">解除账户绑定，请用微信扫码操作</string>
    <string name="account_manage">账号管理</string>

    <string name="network_error">网络不佳,请稍后重试</string>
    <string name="login_failed">登陆失败</string>
</resources>
