<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/base_bg_app">
    <ImageView
      android:id="@+id/iv_cancel"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_marginTop="@dimen/login_cancel_margin_top"
      android:layout_marginLeft="@dimen/login_cancel_margin_left"
      android:src="@drawable/icon_cancel">
    </ImageView>


    <TextView
        android:id="@+id/tv_Login1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="576dp"
        android:layout_marginTop="33dp"
        android:textSize="@dimen/base_text_size_max"
        android:gravity="center"
        android:textColor="@color/base_selected_text_color"
        android:text="@string/QR_login"/>
    <TextView
        android:id="@+id/tv_Login2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="1064dp"
        android:layout_marginTop="23dp"
        android:textSize="@dimen/base_text_size_large"
        android:gravity="center"
        android:textColor="@color/base_default_text_color"
        android:background="@drawable/background_select"
        android:text="@string/Account_login"/>
    <ImageView
        android:id="@+id/iv_logintype"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_toRightOf="@id/tv_Login2"
        android:layout_marginLeft="5dp"
        android:layout_marginTop="14dp"
        android:src="@drawable/icon_passwordlogin"/>

    <FrameLayout
        android:layout_width="656dp"
        android:layout_height="463dp"
        android:layout_marginTop="199dp"
        android:layout_marginLeft="286dp"
        android:layout_centerHorizontal="true">
        <RelativeLayout
            android:id="@+id/rl_QRLogin"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:visibility="visible">
            <ImageView
                android:id="@+id/iv_QRCode_login"
                android:layout_width="225dp"
                android:layout_height="225dp"
                android:layout_centerHorizontal="true"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_below="@id/iv_QRCode_login"
                android:layout_marginTop="20dp"
                android:gravity="center"
                android:textColor="@color/base_default_text_color"
                android:text="@string/open_wechat_scan"/>
        </RelativeLayout>
        <RelativeLayout
            android:id="@+id/rl_AccountLogin"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:layout_gravity="center_horizontal"
            android:visibility="gone">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="64dp"
                android:layout_alignParentLeft="true"
                android:layout_alignParentTop="true"
                android:gravity="center_vertical"
                android:textSize="@dimen/base_text_size_large"
                android:text="@string/username"/>
            <EditText
                android:id="@+id/et_loginid"
                android:layout_alignParentRight="true"
                android:layout_marginRight="40dp"
                android:layout_width="510dp"
                android:layout_height="64dp"
                android:textSize="@dimen/base_text_size_large"
                android:hint="@string/input_phone_number"
                android:paddingLeft="30dp"
                android:textColor="@color/base_default_text_color"
                android:background="@drawable/background_textview" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="64dp"
                android:layout_alignParentLeft="true"
                android:layout_alignParentTop="true"
                android:layout_marginTop="79dp"
                android:gravity="center_vertical"
                android:textSize="@dimen/base_text_size_large"
                android:text="@string/password"/>
            <EditText
                android:id="@+id/et_password"
                android:layout_alignParentRight="true"
                android:layout_marginRight="40dp"
                android:layout_width="510dp"
                android:layout_height="64dp"
                android:layout_marginTop="79dp"
                android:textSize="@dimen/base_text_size_large"
                android:hint="@string/input_phone_number"
                android:textColor="@color/base_default_text_color"
                android:background="@drawable/background_textview" />
           <Button
               android:id="@+id/bt_agress"
               android:layout_below="@id/et_password"
               android:layout_alignLeft="@id/et_password"
               android:layout_marginTop="27dp"
               android:layout_width="50dp"
               android:layout_height="50dp"
               android:background="@drawable/button_select_background"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_toRightOf="@id/bt_agress"
                android:layout_alignTop="@id/bt_agress"
                android:layout_marginTop="6dp"
                android:layout_marginLeft="15dp"
                android:textSize="@dimen/base_text_size_medium"
                android:textColor="@color/base_default_text_color"
                android:text="@string/agree_contact"
                />
            <Button
                android:visibility="visible"
                android:id="@+id/bt_login"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_marginBottom="131dp"
                android:layout_alignParentBottom="true"
                android:textSize="@dimen/base_text_size_medium"
                android:gravity="center"
                android:background="@drawable/background_btn"
                android:textColor="@color/base_default_text_color"
                android:text="@string/login"/>
        </RelativeLayout>
    </FrameLayout>



</RelativeLayout>