<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="600dp"
    android:layout_height="430dp"
    android:background="#1c1c25"
    android:orientation="vertical">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="96dp"
        android:gravity="center"
        android:textSize="@dimen/base_text_size_max"
        android:textColor="@color/base_default_text_color"
        android:text="@string/account_manage"/>
    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/height_line"
        android:background="@color/base_black" />
    <ListView
        android:id="@+id/lv_account"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:divider="#99EEEEEE"
        android:scrollbars="none"/>
    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/height_line"
        android:background="@color/base_black"
        android:layout_alignParentBottom="true" />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="90dp"
        android:orientation="horizontal">
        <TextView
            android:id="@+id/tv_cancel"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:textColor="@color/base_day_common_line"
            android:textSize="@dimen/base_text_size_max"
            android:gravity="center"
            android:text="@string/cancel"/>
        <View
            android:layout_width="@dimen/height_line"
            android:layout_height="match_parent"
            android:background="@color/base_black"/>
        <TextView
            android:id="@+id/tv_switchaccount"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:textColor="@color/base_default_text_color"
            android:textSize="@dimen/base_text_size_max"
            android:gravity="center"
            android:text="@string/switch_account"/>
    </LinearLayout>


</LinearLayout>