<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/base_bg_app">

    <include
        android:id="@+id/rl_back"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginLeft="@dimen/backbtn_margin_left"
        android:layout_marginTop="@dimen/backbtn_margin_top"
        layout="@layout/layout_back" />
    <LinearLayout
        android:layout_width="1694dp"
        android:layout_height="64dp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="38dp">
        <Button
            android:id="@+id/bt_select_all"
            android:layout_width="wrap_content"
            android:layout_height="64dp"
            android:gravity="center"
            android:textColor="@color/base_default_text_color"
            android:textSize="@dimen/base_text_size_max"
            android:background="@drawable/background_button"
            android:text="@string/select_all"
            android:visibility="gone"/>
        <Button
            android:id="@+id/bt_delete"
            android:layout_width="wrap_content"
            android:layout_height="64dp"
            android:gravity="center"
            android:layout_marginLeft="30dp"
            android:textColor="@color/base_default_text_color"
            android:textSize="@dimen/base_text_size_max"
            android:background="@drawable/background_button"
            android:text="@string/delete"
            android:visibility="gone"/>
        <View
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="match_parent"/>
        <Button
            android:id="@+id/bt_edit"
            android:layout_width="wrap_content"
            android:layout_height="64dp"
            android:gravity="center"
            android:textColor="@color/base_default_text_color"
            android:textSize="@dimen/base_text_size_max"
            android:background="@drawable/background_button"
            android:text="@string/edit"/>
    </LinearLayout>

    <androidx.viewpager.widget.ViewPager
        android:id="@+id/vp_message"
        android:layout_centerHorizontal="true"
        android:layout_width="1694dp"
        android:layout_height="451dp"
        android:layout_marginTop="135dp"/>

    <RelativeLayout
        android:id="@+id/rl_nomessage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true">
        <ImageView
            android:id="@+id/iv_no_message"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/icon_no_message"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/iv_no_message"
            android:layout_marginTop="@dimen/text_margin_top"
            android:layout_centerHorizontal="true"
            android:textSize="@dimen/base_text_size_max"
            android:textColor="@color/base_day_common_line"
            android:text="@string/no_message"/>

    </RelativeLayout>
    <LinearLayout
        android:id="@+id/ll_viewGroup"
        android:layout_width="fill_parent"
        android:layout_height="6dp"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="40dp"
        android:gravity="center_horizontal"
        android:orientation="horizontal">
    </LinearLayout>
</RelativeLayout>