<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/base_bg_app">


    <include
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginLeft="@dimen/backbtn_margin_left"
        android:layout_marginTop="@dimen/backbtn_margin_top"
        layout="@layout/layout_back" />


    <LinearLayout
        android:layout_width="876dp"
        android:layout_height="420dp"
        android:layout_marginLeft="105dp"
        android:layout_marginTop="145dp"
        android:orientation="vertical">
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="140dp">
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:src="@drawable/icon_agreement"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginLeft="75dp"
                android:textColor="@color/base_default_text_color"
                android:textSize="@dimen/base_text_size_max"
                android:text="@string/user_agreement"/>
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:src="@drawable/arrow_right"
                android:layout_alignParentRight="true"
                android:layout_marginRight="23dp"/>
            <View
                android:layout_width="800dp"
                android:layout_height="1dp"
                android:layout_alignParentBottom="true"
                android:layout_alignParentRight="true"
                android:background="@color/base_black"/>
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="140dp">
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:src="@drawable/icon_custonservice"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginLeft="75dp"
                android:textColor="@color/base_default_text_color"
                android:textSize="@dimen/base_text_size_max"
                android:text="@string/contact_service"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_alignParentRight="true"
                android:layout_marginRight="23dp"
                android:textColor="@color/base_default_text_color"
                android:textSize="@dimen/base_text_size_max"
                android:text="@string/phone_number"/>
            <View
                android:layout_width="800dp"
                android:layout_height="1dp"
                android:layout_alignParentBottom="true"
                android:layout_alignParentRight="true"
                android:background="@color/base_black"/>
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="140dp">
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:src="@drawable/icon_version"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginLeft="75dp"
                android:textColor="@color/base_default_text_color"
                android:textSize="@dimen/base_text_size_max"
                android:text="@string/version_info"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_alignParentRight="true"
                android:layout_marginRight="23dp"
                android:textColor="@color/base_default_text_color"
                android:textSize="@dimen/base_text_size_max"
                android:text="beta1.5.0"/>
            <View
                android:layout_width="800dp"
                android:layout_height="1dp"
                android:layout_alignParentBottom="true"
                android:layout_alignParentRight="true"
                android:background="@color/base_black"/>
        </RelativeLayout>
    </LinearLayout>

    <RelativeLayout
        android:layout_width="296dp"
        android:layout_height="296dp"
        android:background="@drawable/background_qrcode"
        android:layout_alignParentRight="true"
        android:layout_alignParentBottom="true"
        android:layout_marginRight="235dp"
        android:layout_marginBottom="168dp">
        <ImageView
            android:id="@+id/iv_qrcode"
            android:layout_centerInParent="true"
            android:layout_width="233dp"
            android:layout_height="233dp"/>
    </RelativeLayout>
</RelativeLayout>