<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/base_bg_app">

    <RelativeLayout
        android:id="@+id/rl_account"
        android:layout_width="1140dp"
        android:layout_height="550dp"
        android:layout_marginTop="59dp"
        android:layout_marginLeft="49dp"
        android:background="@drawable/background_account">
        <ImageView
            android:id="@+id/iv_switch_account"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_alignParentTop="true"
            android:layout_marginTop="44dp"
            android:layout_marginRight="44dp"
            android:src="@drawable/icon_switch"/>
        <ImageView
            android:id="@+id/iv_sex"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_alignParentTop="true"
            android:layout_marginTop="51dp"
            android:layout_marginRight="109dp"
            android:src="@drawable/icon_woman"/>
        <ImageView
            android:id="@+id/iv_member"
            android:layout_width="162dp"
            android:layout_height="162dp"
            android:layout_marginLeft="133dp"
            android:layout_marginTop="98dp"
            android:src="@drawable/icon_wechat"/>
        <RelativeLayout
            android:layout_width="162dp"
            android:layout_height="40dp"
            android:layout_below="@id/iv_member"
            android:layout_marginTop="20dp"
            android:layout_alignLeft="@id/iv_member">
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/icon_carowmer"/>
            <TextView
                android:id="@+id/tv_owned"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_alignParentRight="true"
                android:textColor="@color/base_default_text_color"
                android:textSize="@dimen/base_text_size_max"
                android:text="@string/not_car_onwer"/>
        </RelativeLayout>
        <TextView
            android:id="@+id/tv_nickname"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="102dp"
            android:layout_marginLeft="382dp"
            android:textColor="@color/base_default_text_color"
            android:textSize="@dimen/base_text_size_super"
            android:text="奇瑞车主"/>
        <TextView
            android:id="@+id/tv_id"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@id/tv_nickname"
            android:layout_below="@id/tv_nickname"
            android:layout_marginTop="30dp"
            android:textColor="@color/base_day_common_line"
            android:textSize="@dimen/base_text_size_large"
            android:text="ID:"/>
        <TextView
            android:id="@+id/tv_cartype"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@id/tv_nickname"
            android:layout_below="@id/tv_id"
            android:layout_marginTop="20dp"
            android:textColor="@color/base_day_common_line"
            android:textSize="@dimen/base_text_size_large"
            android:text="车型：奇瑞新能源 "/>
        <RelativeLayout
            android:layout_width="200dp"
            android:layout_height="40dp"
            android:layout_below="@id/tv_cartype"
            android:layout_marginTop="20dp"
            android:layout_alignLeft="@id/tv_nickname">
            <ImageView
                android:id="@+id/iv_edit"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/icon_edit"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_toRightOf="@id/iv_edit"
                android:layout_marginLeft="10dp"
                android:layout_centerHorizontal="true"
                android:textColor="@color/base_default_text_color"
                android:textSize="@dimen/base_text_size_large"
                android:text="@string/edit_signature"/>
        </RelativeLayout>
        <View
            android:layout_width="1042dp"
            android:layout_height="1dp"
            android:layout_centerHorizontal="true"
            android:layout_alignParentBottom="true"
            android:layout_marginBottom="180dp"
            android:background="@color/base_white_trans_4d"/>
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_alignParentBottom="true"
            android:layout_marginBottom="59dp">
            <RelativeLayout

                android:layout_alignParentLeft="true"
                android:layout_marginLeft="216dp"
                android:layout_width="202dp"
                android:layout_height="match_parent">
                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/icon_realname"
                    android:layout_alignParentLeft="true"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="@dimen/base_text_size_max"
                    android:textColor="@color/base_default_text_color"
                    android:layout_alignParentRight="true"
                    android:text="@string/not_real_name"/>
            </RelativeLayout>
            <View
                android:layout_width="1dp"
                android:layout_height="match_parent"
                android:background="@drawable/line_division"
                android:layout_centerInParent="true"/>
            <RelativeLayout
                android:id="@+id/rl_bind_wechat"
                android:layout_alignParentRight="true"
                android:layout_marginRight="216dp"
                android:layout_width="202dp"
                android:layout_height="match_parent">
                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/icon_wechat"
                    android:layout_alignParentLeft="true"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="@dimen/base_text_size_max"
                    android:textColor="@color/base_default_text_color"
                    android:layout_alignParentRight="true"
                    android:text="@string/binding_weChat"/>
            </RelativeLayout>
        </RelativeLayout>
    </RelativeLayout>
    <RelativeLayout
        android:id="@+id/rl_message"
        android:layout_width="530dp"
        android:layout_height="260dp"
        android:layout_alignTop="@id/rl_account"
        android:layout_toRightOf="@id/rl_account"
        android:layout_marginLeft="31dp"
        android:background="@drawable/background_message">
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_alignParentLeft="true"
            android:layout_marginLeft="52dp"
            android:layout_marginBottom="33dp"
            android:src="@drawable/icon_message"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/message"
            android:textColor="@color/base_default_text_color"
            android:textSize="@dimen/base_text_size_max"
            android:layout_alignParentLeft="true"
            android:layout_alignParentBottom="true"
            android:layout_marginLeft="170dp"
            android:layout_marginBottom="45dp"/>
    </RelativeLayout>
    <RelativeLayout
        android:id="@+id/rl_more"
        android:layout_width="530dp"
        android:layout_height="260dp"
        android:background="@drawable/background_more"
        android:layout_toRightOf="@id/rl_account"
        android:layout_alignBottom="@id/rl_account"
        android:layout_alignLeft="@id/rl_message">
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_alignParentLeft="true"
            android:layout_marginLeft="52dp"
            android:layout_marginBottom="33dp"
            android:src="@drawable/icon_more"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/base_default_text_color"
            android:textSize="@dimen/base_text_size_max"
            android:layout_alignParentLeft="true"
            android:layout_alignParentBottom="true"
            android:layout_marginLeft="170dp"
            android:layout_marginBottom="45dp"
            android:text="@string/more"/>
    </RelativeLayout>


</RelativeLayout>